final commit agregado el readme para el uso de la aplicacion

--- a/.env copy
+++ b/.env copy
@@ -1,2 +1,5 @@
-FLASK_APP=main.py
-FLASK_DEBUG=True
+SECRET_KEY=" lolailo (dejalo asi mon, ahora lolailo sera mi clave para todo)"
+FLASK_APP="main.py o el nombre que la quieras poner a tu fichero principal"
+FLASK_DEBUG="True | False"
+FLASK_API_KEY="aqui va tu APi KEY"
+FLASK_PATH_SQLITE="data/movement"
